--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -192,6 +192,112 @@ block content
 		.flats__text
 			.subtitle Просторі кімнати з панорамними вікнами чудово підходять для прийому гостей. 
 			.text Квартири в «PODIL PLAZA & RESIDENCE–2» — це ідеальне простір для створення розкішного інтер’єру вашої мрії. Ретельно продумані планувальні рішення квартир відповідають найвищим вимогам до житла класу Преміум.
+	section.plans
+		.icon-with-label.js-plans-prev.plans__prev
+			.icon-with-label__icon
+				+svg('birdy')
+			.icon-with-label__text Попереднє планування
+		.icon-with-label.js-plans-next.plans__next
+			.icon-with-label__icon
+				+svg('birdy')
+			.icon-with-label__text Наступне планування
+		.js-plans.plans__slider
+			.plan-card
+				.plan-card__title Тип 1А
+				.plan-card__subtitle 2-7 поверхи
+				img(src="./assets/images/index/plans/test.png").plan-card__img 
+				.plan-card__text 
+					span.plan-card__text-title Загальна площа: 
+					span.plan-card__text-value 48,05 м<sup>2</sup>
+				.plan-card__text 
+					span.plan-card__text-title Житлова площа: 
+					span.plan-card__text-value  19,25 м<sup>2</sup>
+				.button-std PDF
+			.plan-card
+				.plan-card__title Тип 1А
+				.plan-card__subtitle 2-7 поверхи
+				img(src="./assets/images/index/plans/test.png").plan-card__img 
+				.plan-card__text 
+					span.plan-card__text-title Загальна площа: 
+					span.plan-card__text-value 48,05 м<sup>2</sup>
+				.plan-card__text 
+					span.plan-card__text-title Житлова площа: 
+					span.plan-card__text-value  19,25 м<sup>2</sup>
+				.button-std PDF
+			.plan-card
+				.plan-card__title Тип 1А
+				.plan-card__subtitle 2-7 поверхи
+				img(src="./assets/images/index/plans/test.png").plan-card__img 
+				.plan-card__text 
+					span.plan-card__text-title Загальна площа: 
+					span.plan-card__text-value 48,05 м<sup>2</sup>
+				.plan-card__text 
+					span.plan-card__text-title Житлова площа: 
+					span.plan-card__text-value  19,25 м<sup>2</sup>
+				.button-std PDF
+			.plan-card
+				.plan-card__title Тип 1А
+				.plan-card__subtitle 2-7 поверхи
+				img(src="./assets/images/index/plans/test.png").plan-card__img 
+				.plan-card__text 
+					span.plan-card__text-title Загальна площа: 
+					span.plan-card__text-value 48,05 м<sup>2</sup>
+				.plan-card__text 
+					span.plan-card__text-title Житлова площа: 
+					span.plan-card__text-value  19,25 м<sup>2</sup>
+				.button-std PDF
+			.plan-card
+				.plan-card__title Тип 1А
+				.plan-card__subtitle 2-7 поверхи
+				img(src="./assets/images/index/plans/test.png").plan-card__img 
+				.plan-card__text 
+					span.plan-card__text-title Загальна площа: 
+					span.plan-card__text-value 48,05 м<sup>2</sup>
+				.plan-card__text 
+					span.plan-card__text-title Житлова площа: 
+					span.plan-card__text-value  19,25 м<sup>2</sup>
+				.button-std PDF
+			.plan-card
+				.plan-card__title Тип 1А
+				.plan-card__subtitle 2-7 поверхи
+				img(src="./assets/images/index/plans/test.png").plan-card__img 
+				.plan-card__text 
+					span.plan-card__text-title Загальна площа: 
+					span.plan-card__text-value 48,05 м<sup>2</sup>
+				.plan-card__text 
+					span.plan-card__text-title Житлова площа: 
+					span.plan-card__text-value  19,25 м<sup>2</sup>
+				.button-std PDF
+			.plan-card
+				.plan-card__title Тип 1А
+				.plan-card__subtitle 2-7 поверхи
+				img(src="./assets/images/index/plans/test.png").plan-card__img 
+				.plan-card__text 
+					span.plan-card__text-title Загальна площа: 
+					span.plan-card__text-value 48,05 м<sup>2</sup>
+				.plan-card__text 
+					span.plan-card__text-title Житлова площа: 
+					span.plan-card__text-value  19,25 м<sup>2</sup>
+				.button-std PDF
+	section.developer
+		.title Забудовник
+		.subtitle STATUS GROUP — стабільна і перспективна компанія, яка працює з 2005 року і представляє нове покоління в будівельному бізнесі, де стиль роботи базується на інноваційних рішеннях, величезному практичному досвіді і прагненні до досконалості.
+		.golden-circle
+			img(src="./assets/images/index/developer-golden-circle.png").golden-circle__img
+			+svg('developer-logo').golden-circle__text
+			//-  <span class="text">Назва комплексу — </span><span class="text gold">не просто гарне поєднання слів.</span>
+		.text Компанія STATUS GROUP здійснює функції забудовника, замовника, інвестора, генерального підрядника і девелопера. 
+		.text Усі наші проекти – це новий формат житлової нерухомості з унікальною архітектурою, безпечною та упорядкованою територією і власною соціальною інфраструктурою, в яких враховані всі потреби покупців.
+	section.developer-second
+		+img('index/developer-second-decor.png').developer-second__decor
+		+img('index/developer-second-bg.jpg').developer-second__bg
+		.developer-second__gradient
+		.developer-second__title Будівництво ведеться
+		.subtitle із застосуванням передових технологій і використанням високоякісних матеріалів.
+	section.objects
+		.title Об’єкти які знаходяться на стадії на будівництва: 
+
+
 block footer
 block header
 
