--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -173,18 +173,21 @@
         &__text {
             width: 15ch;
         }
-        .icon--metro {
-            width: 16px;
-            height: 9px;
-        }
-        .icon--marker {
-            width: 10px;
-            height: 12px;
-        }
-        .icon--clock {
-            width: 12px;
-            height: 12px;
-        }
+    }
+    
+    .icon--metro {
+        width: 16px;
+        height: 9px;
+    }
+    
+    .icon--marker {
+        width: 10px;
+        height: 12px;
+    }
+    
+    .icon--clock {
+        width: 12px;
+        height: 12px;
     }
     
     .about-block {
@@ -643,6 +646,130 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
+        }
+    }
+    
+    .objects {
+        position: relative;
+        padding: var(--side-fields);
+        width: 100%;
+        &__bg {
+            position: absolute;
+            right: 0;
+            top: 0;
+            height: 100%;
+            width: 50%;
+            object-fit: cover;
+            z-index: 0;
+        }
+        &>*:not(.objects__bg) {
+            position: relative;
+            z-index: 1;
+        }
+        .title {
+            padding-right: 50%;
+        }
+        &__table {
+            margin-top: 50px;
+            display: flex;
+            flex-wrap: wrap;
+            border: 1px solid #E8E6DF;
+            box-sizing: border-box;
+            border-radius: 25px;
+            overflow: hidden;
+        }
+        &__table-item {
+            width: 50%;
+            display: flex;
+            flex-wrap: wrap;
+            padding: 40px;
+            color: var(--blue);
+            transition: background-color .3s ease-out;
+            text-decoration: none;
+        }
+        &__table-item:nth-child(even) {
+            border-left: 1px solid #E8E6DF;
+        }
+        &__table-item:nth-last-child(n+3) {
+            border-bottom: 1px solid #E8E6DF;
+        }
+        &__table-item-title {
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 1.29em;
+            margin-bottom: 25px;
+        }
+        &__table-item-text-wrap {
+            width: 50%;
+            margin-left: auto;
+        }
+        &__table-item img {
+            width: calc(50% - 60px);
+            object-fit: contain;
+        }
+        &__table-item-point {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+            &-icon {
+                width: 30px;
+            }
+        }
+        @include from(769px) {
+            &__table-item:hover {
+                background-color: var(--gold);
+            }
+        }
+    }
+    
+    .contacts {
+        padding: var(--side-fields);
+        background-color: #F4F3EC;
+        display: flex;
+        flex-wrap: wrap;
+        &__left {
+            width: 40%;
+        }
+        &__right {
+            width: 50%;
+            margin-left: auto;
+        }
+        .title {
+            margin-bottom: 40px;
+        }
+        &__subtitle {
+            text-transform: uppercase;
+            font-size: 12px;
+            line-height: 1em;
+            /* identical to box height, or 100% */
+            letter-spacing: 0.1em;
+            text-transform: uppercase;
+            color: var(--blue-light);
+        }
+        &__remark {
+            font-size: 10px;
+            line-height: 1.2em;
+            color: var(--blue-light);
+            margin-top: 20px;
+        }
+        .icon-with-label {
+            margin-top: 20px;
+        }
+        .icon-with-label.text-l {
+            margin-top: 30px;
+            padding-top: 3px;
+            padding-bottom: 3px;
+            font-size: 18px;
+            line-height: 1.3em;
+            letter-spacing: 0.06em;
+            font-family: $default-font2;
+        }
+        .icon-with-label__icon {
+            background-color: var(--blue);
+        }
+        .button-std {
+            margin-top: 20px;
+            max-width: 300px;
         }
     }
     
