--- a/src/assets/styles/standart-elements.scss
+++ b/src/assets/styles/standart-elements.scss
@@ -628,7 +628,7 @@
     align-items: center;
     text-decoration: none;
     font-size: 16px;
-    letter-spacing: 0.18em;
+    // letter-spacing: 0.18em;
     color: var(--blue);
 }
 
@@ -638,7 +638,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     background-color: var(--white);
-    padding: 40px;
+    // padding: 40px;
     max-width: 422px;
     .mfp-close {
         padding: 0 !important;
@@ -689,12 +689,10 @@
     }
     button[type=submit] {
         border: none;
-        font-family: $default-font;
         width: 190px;
         margin-left: auto;
         margin-right: 0;
         margin-top: 45px;
-        background-color: transparent;
     }
     .checkbox-first {
         margin-bottom: 0px;
@@ -703,13 +701,12 @@
     textarea {
         background: transparent;
         border: none;
-        font-size: 14px;
-        line-height: 22px;
-        font-family: $default-font;
-        font-style: normal;
-        font-weight: 500;
-        font-size: 13px;
-        line-height: 13px;
+        font-size: 18px;
+        line-height: 1.3em;
+        letter-spacing: 0.06em;
+        /* Text */
+        color: #031826;
+        font-family: $default-font2;
         align-self: center;
         width: 100%;
     }
@@ -725,7 +722,7 @@
         position: relative;
         display: flex;
         align-items: flex-start;
-        margin-top: 30px;
+        margin-top: 40px;
         padding-bottom: 14px;
         margin-right: auto;
         width: 100%;
@@ -886,6 +883,7 @@
     left: 0;
     font-size: 0.8rem;
     color: red;
+    font-family: $default-font2;
 }
 
 .popup-std {
