--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -111,3 +111,4 @@ aside.menu
     a(href="tel:0443382727").menu__tel 044 338 27 27
     .menu__form-call.js-form-call 
         .menu__form-call-inner Замовити дзвінок
+    .mobile-call-menu.js-mobile-call-menu(data-opened="×" data-closed="Меню") Меню
