--- a/src/pug/includes/common-form.pug
+++ b/src/pug/includes/common-form.pug
@@ -1,19 +1,22 @@
 .common-form-js.common-form-wrapper
-    img(src="./assets/images/callback-photo.jpg")
     form.common-form(data-name="contact-form")
-        legend Заказать звонок
-        .sublegend Оставьте свой номер и мы свяжемся с вами 
-        .mfp-close(data-before="Закрыть")
-            <svg class="mfp-close-img" width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <g class="close-group">
-                    <path d="M14.0001 13L24.6067 23.6066" stroke="white"/>
-                    <path d="M24.6066 13L14 23.6066" stroke="white"/>
-                </g>
-            </svg>
+        legend Цікавить проект?
+        .sublegend Залиште заявку і ми вас обов'язково повідомимо про старт продажів!
+        
+            //- <svg class="mfp-close-img" width="37" height="37" viewBox="0 0 37 37" fill="none" xmlns="http://www.w3.org/2000/svg">
+            //-     <g class="close-group">
+            //-         <path d="M14.0001 13L24.6067 23.6066" stroke="var(--gold)"/>
+            //-         <path d="M24.6066 13L14 23.6066" stroke="var(--gold)"/>
+            //-     </g>
+            //- </svg>
+            <svg class="mfp-close" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="25.9964" height="1.99972" transform="matrix(0.699754 0.714384 -0.699754 0.714384 1.39941 0)" fill="#EBC78C"/>
+                <rect width="25.9964" height="1.99972" transform="matrix(0.699754 -0.714384 0.699754 0.714384 0.409668 18.5714)" fill="#EBC78C"/>
+                </svg>
         .input-group
-            .input-group__icon
+            +svg('man').input-group__icon
             input(autocomplete="off" data-error_mes="Введите имя" name="name" data-required="true" type="text" data-pattern="" placeholder="Имя:*")
         .input-group
-            .input-group__icon
+            +svg('tel-tube').input-group__icon
             input(autocomplete="off" data-error_mes="Введите номер телефона" name="tel" inputmode="tel" data-required="true" type="text" data-pattern="" placeholder="Телефон:*")
-        button.button-std.submit-js(type="submit" data-before="Жду звонка")
+        button.button-std.submit-js(type="submit") Надіслати
